--- a/source/less/blocks/description.less
+++ b/source/less/blocks/description.less
@@ -3,14 +3,19 @@
   color: #283645;
   font-size: 14px;
   font-weight: normal;
+  letter-spacing: 0.3px;
   line-height: 30px;
   margin: 0 auto;
   padding: 0;
   text-align: center;
-  width: 240px;
+  width: 245px;
 
   &--form-top {
     width: 275px;
+  }
+
+  &--photo-middle {
+    width: 255px;
   }
 }
 
@@ -22,6 +27,7 @@
   .description {
     font-size: 18px;
     line-height: 30px;
+    letter-spacing: 0.4px;
     margin: 0 auto;
     padding: 0;
     width: 542px;
