--- a/source/less/blocks/edit-photo.less
+++ b/source/less/blocks/edit-photo.less
@@ -13,7 +13,7 @@
   justify-content: center;
   list-style: none;
   margin: 0 auto;
-  margin-bottom: 19px;
+  margin-bottom: 24px;
   padding: 0;
 }
 
@@ -39,6 +39,7 @@
 
   &--contrast {
     height: 32px;
+    margin: 0 auto;
     width: 32px;
   }
 }
@@ -49,7 +50,7 @@
   justify-content: center;
   list-style: none;
   margin: 0;
-  margin-bottom: 18px;
+  margin-bottom: 13px;
   padding: 0;
 }
 
@@ -65,6 +66,7 @@
 
 .edit-photo__range {
   appearance: none;
+  height: 18px;
   width: 240px;
   background: transparent;
 }
@@ -78,6 +80,10 @@
   width: 14px;
 }
 
+.edit-photo__range::-ms-thumb:active {
+  background-color: #d22856;
+}
+
 .edit-photo__range::-webkit-slider-thumb {
   appearance: none;
   border: 2px solid #d22856;
@@ -89,6 +95,10 @@
   width: 14px;
 }
 
+.edit-photo__range::-webkit-slider-thumb:active {
+  background-color: #d22856;
+}
+
 .edit-photo__range::-moz-range-thumb {
   border: 2px solid #d22856;
   border-radius: 50px;
@@ -96,6 +106,10 @@
   cursor: pointer;
   height: 14px;
   width: 14px;
+}
+
+.edit-photo__range::-moz-range-thumb:active {
+  background-color: #d22856;
 }
 
 .edit-photo__range::-ms-track {
@@ -124,28 +138,34 @@
     align-items: center;
     flex-direction: row;
     justify-content: center;
+    margin-bottom: 38px;
+    margin-left: 16px;
     padding: 0;
   }
 
+
   .edit-photo__tools-list {
-    flex-direction: column;
+    display: block;
     margin: 0;
   }
 
   .edit-photo__tool-item {
     border-bottom: 1px solid #dddfe0;
-    height: 22px;
-    margin: 19px 0 6px;
-    padding: 0 22px 24px 0;
-    width: 22px;
+    height: 23px;
+    margin: 0;
+    margin-bottom: 27px;
+    padding: 0 29px 22px 0;
+    width: 23px;
 
     &:first-child {
-      margin-top: 23px;
+      margin-top: 39px;
     }
   }
 
   .edit-photo__tool {
     fill: #d22856;
+    height: 23px;
+    width: 23px;
 
     &:hover {
       fill: #d22856;
@@ -158,18 +178,20 @@
   }
 
   .edit-photo__range-list {
-    flex-direction: column;
+    display: block;
     margin: 0;
   }
 
   .edit-photo__range-item {
     border-bottom: 1px solid #dddfe0;
     display: block;
-    padding-bottom: 33px;
-    margin: 0 0 20px;
+    margin: 0;
+    padding-bottom: 22px;
+    padding-right: 18px;
+    padding-top: 29px;
 
     &:first-child {
-      margin-top: 32px;
+      padding-top: 14px;
     }
   }
 
@@ -180,7 +202,8 @@
 
 @media (min-width: @desktop-width) {
   .edit-photo {
-    margin-bottom: 62px;
+    margin-bottom: 131px;
+    margin-left: 35px;
   }
 
   .edit-photo__tool {
@@ -192,22 +215,34 @@
 
   .edit-photo__tool-item {
     height: 48px;
-    margin: 10px 0 4px;
-    padding: 0 43px 9px 0;
+    margin: 0;
+    margin-bottom: 13px;
+    padding: 0 43px 10px 0;
     width: 48px;
 
     &:first-child {
-      margin-top: 10px;
+      margin-top: 29px;
+    }
+  }
+
+  .edit-photo__tool {
+    height: 48px;
+    width: 48px;
+
+    &--contrast {
+      height: 34px;
+      margin: auto;
+      width: 34px;
     }
   }
 
   .edit-photo__range-item {
-    margin-bottom: 23px;
-    padding-bottom: 30px;
+    padding-bottom: 23px;
     padding-right: 30px;
+    padding-top: 27px;
 
     &:first-child {
-      margin-top: 38px;
+      padding-top: 29px;
     }
   }
 
