--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -40,6 +40,7 @@
 .features__description {
   font-size: 14px;
   font-weight: lighter;
+  letter-spacing: 0.3px;
   line-height: 23px;
   margin: 0 auto;
   padding: 0;
@@ -80,7 +81,7 @@
 
   .features__list {
     margin-left: 310px;
-    width: 295px;
+    width: 320px;
   }
 
   .features__item {
@@ -96,13 +97,13 @@
     margin: 0;
     margin-bottom: 12px;
     text-align: left;
-    width: 295px;
+    width: 320px;
   }
 
   .features__description {
     line-height: 24px;
     text-align: left;
-    width: 296px;
+    width: 320px;
   }
 
   .features__pic {
@@ -159,6 +160,6 @@
     line-height: 30px;
     padding: 0;
     text-align: center;
-    width: 230px;
+    width: 240px;
   }
 }
