--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -20,6 +20,7 @@
 .page-footer__logo {
   display: block;
   margin: 0 auto;
+  margin-bottom: 36px;
   padding: 0;
   text-decoration: none;
   text-align: center;
@@ -98,7 +99,7 @@
   }
 
   .page-footer__logo {
-    margin: 0 0 0 7px;
+    margin: 0 0 8px 7px;
   }
 
   .page-footer__credits {
@@ -119,6 +120,11 @@
   .page-footer__credits {
     font-size: 18px;
     line-height: 18px;
+    margin-top: 0;
+  }
+
+  .page-footer__logo {
+    margin-bottom: 10px;
   }
 
   .page-footer__glasses {
