--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -8,9 +8,9 @@
     background-image: url("../img/bg-triangle-white.svg");
     background-size: contain;
     background-repeat: no-repeat;
-    bottom: -39px;
+    bottom: -99px;
     content: "";
-    height: 40px;
+    height: 100px;
     left: 0;
     margin: 0 auto;
     padding: 0;
@@ -23,7 +23,6 @@
 
 .review__wrapper {
   margin: 0;
-  overflow: hidden;
   padding: 0;
 }
 
@@ -34,14 +33,14 @@
   overflow: hidden;
   padding: 0;
   position: relative;
-  width: 270px;
+  width: 290px;
 }
 
 .review__item {
   display: none;
   margin: 0 auto;
   padding: 0;
-  width: 270px;
+  width: 290px;
 
   &--active {
     display: block;
@@ -69,12 +68,13 @@
 .review__description {
   font-size: 14px;
   font-weight: normal;
+  letter-spacing: 0.4px;
   line-height: 30px;
   margin: 0 auto;
   margin-top: 13px;
   padding: 0;
   text-align: center;
-  width: 270px;
+  width: 285px;
 }
 
 .review__toggles {
@@ -86,11 +86,6 @@
   .review {
     padding: 0;
     padding-top: 38px;
-
-    &::after {
-      bottom: -58px;
-      height: 59px;
-    }
   }
 
   .review__wrapper {
@@ -100,7 +95,7 @@
   }
 
   .review__list {
-    width: 625px;
+    width: 640px;
   }
 
   .review__item {
@@ -108,7 +103,7 @@
     display: none;
     flex-direction: column;
     justify-content: flex-start;
-    width: 625px;
+    width: 640px;
 
     &--active {
       display: flex;
@@ -131,6 +126,7 @@
     display: block;
     font-size: 14px;
     font-weight: normal;
+    letter-spacing: 0.2px;
     line-height: 30px;
     margin: 2px auto;
     text-align: center;
@@ -141,7 +137,7 @@
     line-height: 30px;
     margin: 0 auto;
     margin-bottom: 13px;
-    width: 610px;
+    width: 630px;
   }
 
   .review__toggles {
@@ -166,8 +162,8 @@
     }
 
     &::after {
-      bottom: -93px;
-      height: 94px;
+      bottom: -199px;
+      height: 200px;
     }
   }
 
@@ -177,16 +173,16 @@
 
   .review__list {
     margin-bottom: 33px;
-    width: 695px;
+    width: 710px;
   }
 
   .review__item {
-    width: 700px;
+    width: 710px;
   }
 
   .review__description {
     margin-bottom: 36px;
-    width: 690px;
+    width: 700px;
   }
 
   .review__user {
