--- a/source/less/blocks/form-competition.less
+++ b/source/less/blocks/form-competition.less
@@ -11,7 +11,7 @@
   border: none;
   margin: 0 auto;
   padding: 0;
-  padding-bottom: 25px;
+  padding-bottom: 20px;
 
   &--light {
     background-color: #ffffff;
@@ -21,17 +21,17 @@
   &--dark {
     background-color: #f2f2f2;
     color: #283645;
-    padding: 38px 0 45px;
+    padding: 38px 0 47px;
     width: 100%;
   }
 
   &--comment {
-    padding: 40px 0 45px;
+    padding: 38px 0 48px;
     width: 280px;
   }
 
   &--adress {
-    padding-top: 35px;
+    padding-top: 37px;
   }
 }
 
@@ -44,7 +44,7 @@
 
 .form-competition__item {
   margin: 0;
-  margin-bottom: 18px;
+  margin-bottom: 22px;
   padding: 0;
 }
 
@@ -55,7 +55,7 @@
   padding: 0;
 
   &--radio {
-    margin-bottom: 44px;
+    margin-bottom: 45px;
 
     &:last-child {
       margin-bottom: 0;
@@ -72,9 +72,10 @@
   display: inline-block;
   font-size: 14px;
   font-weight: normal;
+  letter-spacing: 0.3px;
   line-height: 20px;
   margin: 0 23px;
-  margin-bottom: 3px;
+  margin-bottom: 10px;
   padding: 0;
   text-transform: uppercase;
 }
@@ -91,10 +92,11 @@
   color: #283645;
   font-size: 18px;
   font-weight: normal;
-  line-height: 30px;
+  letter-spacing: 0.4px;
+  line-height: 29px;
   margin: 0 auto;
-  padding: 15px 22px;
-  width: 232px;
+  padding: 15px 21px;
+  width: 234px;
 
   &:hover {
     border: 2px solid #283645;
@@ -111,6 +113,7 @@
   float: left;
   font-size: 14px;
   font-weight: normal;
+  letter-spacing: 0.3px;
   line-height: 18px;
   margin: 0 auto;
   padding: 0;
@@ -118,12 +121,16 @@
   text-transform: uppercase;
 
   &--dark {
-    margin-bottom: 41px;
+    margin-bottom: 42px;
     width: 100%;
   }
 
   &--adress {
     display: none;
+  }
+
+  &--device {
+    margin-bottom: 39px;
   }
 }
 
@@ -131,18 +138,6 @@
   margin: 0 auto;
   padding: 0;
   width: 240px;
-}
-
-.form-competition__item-label {
-  color: #283645;
-  cursor: pointer;
-  font-size: 18px;
-  font-weight: normal;
-  line-height: 30px;
-  margin: 0;
-  margin-bottom: 43px;
-  padding-left: 70px;
-  position: relative;
 }
 
 .form-competition__checkbox {
@@ -153,8 +148,20 @@
   display: none;
 }
 
-.form-competition__item-label::before {
-  background: #ffffff;
+.form-competition__item-label {
+  color: #283645;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: normal;
+  letter-spacing: 0.3px;
+  line-height: 30px;
+  margin: 0;
+  margin-bottom: 43px;
+  padding-left: 70px;
+  position: relative;
+
+  &::before {
+  background-color: #ffffff;
   border: 2px solid #e5e5e5;
   bottom: 0;
   content: "";
@@ -167,25 +174,18 @@
   position: absolute;
   width: 35px;
   z-index: 1;
+  }
+
+  &--radio::before {
+    border-radius: 50px;
+  }
 }
 
-.form-competition__item-label--radio::before {
-  border-radius: 50px;
-}
 
-.form-competition__checkbox[type="checkbox"]:checked ~ .form-competition__item-label--checkbox::after {
-  border-color: #d22856;
-  border-top-style: none;
-  border-right-style: none;
-  bottom: 0;
-  height: 11px;
-  left: 0;
-  margin: auto;
-  padding: 0;
-  position: absolute;
-  top: 0;
-  width: 22px;
-  z-index: 2;
+.form-competition__checkbox[type="checkbox"]:checked ~ .form-competition__item-label--checkbox::before {
+  background-image: url(../img/icon-checked.svg);
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .form-competition__checkbox[type="checkbox"]:hover ~ .form-competition__item-label--checkbox::before {
@@ -196,15 +196,30 @@
   border: 2px solid #d22856;
 }
 
+.form-competition__radio[type="radio"]:checked ~ .form-competition__item-label--radio::before {
+  background-image: url(../img/icon-map-marker.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.form-competition__radio[type="radio"]:hover ~ .form-competition__item-label--radio::before {
+  border: 2px solid #283645;
+}
+
+.form-competition__radio[type="radio"]:active ~ .form-competition__item-label--radio::before {
+  border: 2px solid #d22856;
+}
+
 .form-competition__comment-title {
   color: #d22856;
   display: block;
   float: left;
   font-size: 14px;
   font-weight: normal;
+  letter-spacing: 0.3px;
   line-height: 18px;
   margin: 0 auto;
-  margin-bottom: 18px;
+  margin-bottom: 15px;
   padding: 0;
   text-align: center;
   text-transform: uppercase;
@@ -219,6 +234,7 @@
   font-size: 18px;
   font-weight: normal;
   height: 167px;
+  letter-spacing: 0.4px;
   line-height: 30px;
   margin: 0 auto;
   padding: 15px 20px;
@@ -240,6 +256,7 @@
   color: #283645;
   font-size: 14px;
   font-weight: normal;
+  letter-spacing: 0.3px;
   line-height: 30px;
   margin: 0 auto;
   margin-bottom: 16px;
@@ -268,18 +285,19 @@
       background-color: #ffffff;
       padding: 0;
       padding-bottom: 60px;
-      width: 504px;
+      width: 500px;
     }
 
     &--name {
       border: none;
-      margin-bottom: 53px;
+      margin-bottom: 52px;
       order: 0;
     }
 
     &--device {
+      margin-bottom: 50px;
       order: 1;
-      padding: 42px 56px 62px;
+      padding: 43px 59px 59px;
     }
 
     &--adress {
@@ -290,8 +308,8 @@
 
     &--achievements {
       order: 3;
-      margin-bottom: 57px;
-      padding: 42px 56px 52px;
+      margin-bottom: 58px;
+      padding: 42px 58px 52px;
     }
 
     &--comment {
@@ -377,12 +395,13 @@
   }
 
   .form-competition__text {
-    height: 29px;
+    height: 30px;
     margin: 0;
 
     &--name {
+      height: 36px;
       flex-grow: 1;
-      padding: 14px 19px;
+      padding: 11px 19px;
     }
 
     &--contacts {
@@ -395,7 +414,7 @@
   }
 
   .form-competition__text-label {
-    margin: 0 20px;
+    margin: 0 39px;
 
     &--name {
       margin: 0;
@@ -404,15 +423,7 @@
   }
 
   .form-competition__title-wrap {
-    width: 360px;
-
-    &--achievement {
-      width: 360px;
-    }
-
-    &--device {
-      width: 310px;
-    }
+    width: auto;
   }
 
   .form-competition__title {
@@ -420,10 +431,11 @@
     float: none;
     line-height: 30px;
     margin: 0 auto;
-    padding: 0 38px;
+    padding: 0 26px;
 
     &--dark {
       margin: 0 auto;
+      white-space: nowrap;
       width: auto;
     }
 
@@ -435,7 +447,7 @@
 
   .form-competition__select-item {
     &--radio {
-      margin-bottom: 44px;
+      margin-bottom: 45px;
     }
 
     &--achievement {
@@ -445,7 +457,7 @@
   }
 
   .form-competition__item-label {
-    padding-left: 61px;
+    padding-left: 60px;
   }
 
   .form-competition__comment-title {
@@ -491,14 +503,17 @@
   }
 
   .form-competition__set {
+    margin-bottom: 52px;
+
     &--name {
       width: 434px;
-      margin: 20px 0 0;
+      margin: 20px 0 50px;
     }
 
     &--device {
       width: 431px;
       margin: 0;
+      margin-bottom: 50px;
       padding: 45px 0 60px;
     }
 
@@ -548,10 +563,10 @@
 
   .form-competition__item {
     &--name {
-      margin-bottom: 54px;
+      margin-bottom: 52px;
 
       &:last-child {
-        margin-bottom: 51px;
+        margin-bottom: 0px;
       }
     }
 
@@ -560,8 +575,12 @@
     }
   }
 
+  .form-competition__item-label {
+    padding-left: 59px;
+  }
+
   .form-competition__text-input {
-    margin-bottom: 17px;
+    margin-bottom: 15px;
 
     &--phone::after {
       height: 62px;
@@ -576,7 +595,8 @@
 
   .form-competition__text {
     &--name {
-      padding: 14px 19px;
+      height: 38px;
+      padding: 11px 19px;
     }
 
     &--contacts {
@@ -588,7 +608,7 @@
   }
 
   .form-competition__text-label {
-    margin: 0 21px;
+    margin: 0 20px;
 
     &--name {
       margin-left: 0;
@@ -597,8 +617,9 @@
 
   .form-competition__title {
     font-size: 13px;
+    letter-spacing: 0.8px;
     line-height: 30px;
-    padding: 0 17px;
+    padding: 0 30px;
     white-space: nowrap;
   }
 
@@ -606,10 +627,15 @@
     &--achievement {
       margin: 0;
       margin-bottom: 11px;
+      margin-right: 58px;
 
       &:last-child {
         margin-bottom: 11px;
       }
+    }
+
+    &--radio {
+      margin-bottom: 44px;
     }
   }
 
