--- a/source/less/blocks/user-upload.less
+++ b/source/less/blocks/user-upload.less
@@ -23,14 +23,15 @@
 
 .user-upload__buttons {
   border-top: 1px solid #dddfe0;
-  margin: 13px 0 0;
-  padding: 27px 15px 10px;
+  margin: 0;
+  padding: 49px 15px 10px;
 }
 
 .user-upload__button {
   display: block;
   background-color: transparent;
-  margin: 12px auto;
+  margin: 0 auto;
+  margin-bottom: 12px;
   padding: 15px;
   text-align: center;
   width: 280px;
@@ -69,24 +70,29 @@
 
 @media (min-width: @tablet-width) {
   .user-upload {
-    padding: 29px 0 33px;
+    padding: 26px 0 55px;
   }
 
   .user-upload__photo {
     height: 400px;
-    margin: 0 0 22px;
+    margin: 0;
     width: 300px;
   }
 
   .user-upload__buttons {
     border: none;
     margin: 0;
-    padding: 24px 13px 0;
+    padding: 0 13px;
   }
 
   .user-upload__button {
-    margin: 23px auto;
+    margin: 0 auto;
+    margin-bottom: 25px;
     width: 259px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 }
 
@@ -105,8 +111,10 @@
     align-items: center;
     display: flex;
     justify-content: space-between;
-    margin-top: 41px;
-    padding: 60px 0 0;
+    margin: 0;
+    margin-left: 35px;
+    padding: 0;
+    width: 410px;
   }
 
   .user-upload__button {
