--- a/source/less/blocks/users-posts.less
+++ b/source/less/blocks/users-posts.less
@@ -96,6 +96,7 @@
   color: #283645;
   font-size: 14px;
   font-weight: normal;
+  letter-spacing: 0.2px;
   line-height: 24px;
   margin: 0;
   margin-bottom: 1px;
@@ -106,6 +107,7 @@
   color: #d22856;
   font-size: 12px;
   font-weight: normal;
+  letter-spacing: 0.2px;
   line-height: 24px;
   margin: 10px 0 0;
   padding: 0 0 0 31px;
@@ -195,6 +197,7 @@
 
   .users-posts__description {
     height: 59px;
+    letter-spacing: 0.3px;
 
     &--pano {
       height: auto;
@@ -204,7 +207,7 @@
   .users-posts__like {
     order: -1;
     margin: 0;
-    padding: 0 34px 0 0;
+    padding: 0 31px 0 0;
 
     &::before {
       margin: auto 0;
