--- a/source/less/blocks/edit-photo.less
+++ b/source/less/blocks/edit-photo.less
@@ -66,9 +66,11 @@
 
 .edit-photo__range {
   appearance: none;
-  height: 18px;
-  width: 240px;
   background: transparent;
+  height: 18px;
+  margin: 0;
+  padding: 0;
+  width: 240px;
 }
 
 .edit-photo__range::-ms-thumb {
