--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -29,7 +29,7 @@
 @media (min-width: @tablet-width) {
   .contacts {
     padding-bottom: 25px;
-    padding-top: 14px;
+    padding-top: 47px;
 
     &::after {
       bottom: -199px;
@@ -38,18 +38,24 @@
   }
 
   .contacts__question {
-    margin: 32px auto 19px;
+    margin: 0 auto;
+    margin-bottom: 45px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .contacts {
     padding-bottom: 17px;
-    padding-top: 35px;
+    padding-top: 65px;
 
     &::after {
       bottom: -399px;
       height: 400px;
     }
+  }
+
+  .contacts__question {
+    margin: 0 auto;
+    margin-bottom: 57px;
   }
 }
