--- a/source/less/blocks/container.less
+++ b/source/less/blocks/container.less
@@ -30,7 +30,7 @@
     }
 
     &--edit {
-      align-items: flex-end;
+      align-items: flex-start;
       display: flex;
       flex-wrap: nowrap;
       justify-content: space-between;
@@ -56,10 +56,6 @@
     }
 
     &--edit {
-      align-items: flex-end;
-      display: flex;
-      flex-wrap: nowrap;
-      justify-content: space-between;
       padding: 0;
       padding-left: 20px;
       width: 802px;
