--- a/source/less/blocks/effect.less
+++ b/source/less/blocks/effect.less
@@ -51,7 +51,7 @@
 
   .effect__description {
     margin-right: 5px;
-    margin-top: 10px;
+    margin-top: 12px;
     width: 305px;
   }
 
@@ -61,6 +61,7 @@
     font-weight: bold;
     line-height: 36px;
     margin: 0;
+    margin-bottom: 11px;
     padding: 0;
     width: 170px;
   }
@@ -70,7 +71,8 @@
     font-weight: normal;
     letter-spacing: 0.3px;
     line-height: 24px;
-    margin: 11px 0;
+    margin: 0;
+    margin-bottom: 11px;
     padding: 0;
   }
 
@@ -81,6 +83,14 @@
     letter-spacing: 0.2px;
     line-height: 24px;
     text-decoration: underline;
+  }
+
+  .effect__title br {
+    display: block;
+
+    &:first-child {
+      display: none;
+    }
   }
 }
 
@@ -111,12 +121,17 @@
   }
 
   .effect__title {
+    margin-bottom: 21px;
     width: 300px;
+  }
+
+  .effect__title br {
+    display: none;
   }
 
   .effect__description {
     margin-right: 5px;
-    margin-top: 43px;
+    margin-top: 46px;
     width: 569px;
   }
 
@@ -124,11 +139,20 @@
     font-size: 18px;
     letter-spacing: 0.4px;
     line-height: 30px;
-    margin: 21px 0 30px;
+    margin-bottom: 30px;
+  }
+
+  .effect__text br {
+    display: none;
+
+    &:first-child {
+      display: block;
+    }
   }
 
   .effect__more {
     font-size: 18px;
+    letter-spacing: 0.4px;
     line-height: 30px;
   }
 }
