--- a/source/less/blocks/information.less
+++ b/source/less/blocks/information.less
@@ -29,7 +29,7 @@
 @media (min-width: @tablet-width) {
   .information__header {
     margin: 0 auto;
-    padding: 49px 0;
+    padding: 50px 0 48px;
   }
 }
 
