--- a/source/less/blocks/user-upload.less
+++ b/source/less/blocks/user-upload.less
@@ -9,7 +9,7 @@
   box-sizing: border-box;
   height: 374px;
   margin: 0 auto;
-  margin-bottom: 42px;
+  margin-bottom: 41px;
   overflow: hidden;
   width: 280px;
 }
@@ -22,14 +22,14 @@
 }
 
 .user-upload__buttons {
-  border-top: 1px solid #dddfe0;
   margin: 0;
-  padding: 49px 15px 10px;
+  padding: 0 15px 10px;
 }
 
 .user-upload__button {
   display: block;
   background-color: transparent;
+  font-size: 18px;
   margin: 0 auto;
   margin-bottom: 12px;
   padding: 15px;
@@ -70,12 +70,13 @@
 
 @media (min-width: @tablet-width) {
   .user-upload {
-    padding: 26px 0 55px;
+    padding: 55px 0 55px;
   }
 
   .user-upload__photo {
     height: 400px;
     margin: 0;
+    margin-top: 4px;
     width: 300px;
   }
 
@@ -99,7 +100,7 @@
 @media (min-width: @desktop-width) {
   .user-upload {
     margin: 0 auto 25px;
-    padding: 25px 0 55px;
+    padding: 53px 0 55px;
     width: 942px;
   }
 
