--- a/source/less/blocks/users-posts.less
+++ b/source/less/blocks/users-posts.less
@@ -116,13 +116,14 @@
 
   &::before {
     background: url("../img/icon-heart.svg") no-repeat;
+    background-size: contain;
     bottom: 0;
     content: "";
-    height: 20px;
+    height: 18px;
     margin: auto;
     position: absolute;
     top: 0;
-    width: 13px;
+    width: 15px;
   }
 }
 
