--- a/source/less/blocks/pop-up.less
+++ b/source/less/blocks/pop-up.less
@@ -2,21 +2,22 @@
   display: none;
   background-color: #ffffff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  bottom: 0;
   left: 0;
   margin: auto;
-  padding: 15px 0;
+  padding: 0;
+  padding-top: 15px;
   position: fixed;
   right: 0;
-  top: 0;
-  width: 100%;
+  top: 20%;
+  width: 320px;
   z-index: 10;
 }
 
 .pop-up__text {
   margin: 0 auto;
-  padding: 0 25px;
+  padding: 0;
   text-align: center;
+  width: 270px;
 }
 
 .pop-up__title {
@@ -44,7 +45,8 @@
 
   &--success {
     background-color: #f2f2f2;
-    margin: 29px 0;
+    margin: 0;
+    margin-top: 29px;
     padding: 50px 0;
   }
 }
@@ -52,11 +54,10 @@
 @media (min-width: @tablet-width) {
   .pop-up {
     width: 461px;
-    height: 363px;
+  }
 
-    &--success {
-      height: 406px;
-    }
+  .pop-up__text {
+    width: 320px;
   }
 
   .pop-up__title {
@@ -69,7 +70,38 @@
     line-height: 24px;
   }
 
+  .pop-up__button-place {
+    margin-top: 35px;
+  }
+
+  .pop-up__button-place {
+    margin: 37px auto;
+    margin-top: 37px;
+
+    &--success {
+      margin-top: 38px;
+      padding: 48px 0;
+    }
+  }
+
+  .pop-up__desctiption br {
+    display: none;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .pop-up {
+    width: 780px;
+  }
+
   .pop-up__text {
-    padding: 0 76px;
+    width: 420px;
+  }
+
+  .pop-up__button-place {
+    background-color: #f2f2f2;
+    margin: 0;
+    margin-top: 38px;
+    padding: 48px 0;
   }
 }
