--- a/source/less/blocks/edit-photo.less
+++ b/source/less/blocks/edit-photo.less
@@ -105,23 +105,35 @@
 
 .edit-photo__range::-ms-track {
   background: transparent;
+  border: none;
   color: transparent;
+  cursor: pointer;
   height: 2px;
   width: 240px;
 }
 
 .edit-photo__range::-webkit-slider-runnable-track {
   background: #283645;
+  border: none;
   height: 2px;
   width: 100%;
 }
 
 .edit-photo__range::-moz-range-track {
-  width: 100%;
-  height: 8.4px;
   background: #283645;
-  border-radius: 1.3px;
-  border: 0.2px solid #010101;
+  border: none;
+  height: 2px;
+  width: 100%;
+}
+
+.edit-photo__range::-ms-fill-lower {
+  background: #283645;
+  height: 2px;
+}
+
+.edit-photo__range::-ms-fill-upper {
+  background: #283645;
+  height: 2px;
 }
 
 @media (min-width: @tablet-width) {
