--- a/source/less/blocks/form-competition.less
+++ b/source/less/blocks/form-competition.less
@@ -187,6 +187,7 @@
   background-image: url("../img/icon-checked.svg");
   background-repeat: no-repeat;
   background-position: center;
+  background-size: 22px 16px;
 }
 
 .form-competition__checkbox[type="checkbox"]:hover ~ .form-competition__item-label--checkbox::before {
