--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -245,6 +245,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding: 8px 0;
     margin: 0 auto;
     width: 938px;
   }
@@ -275,7 +276,9 @@
 
   .main-nav__item {
     border: none;
+    line-height: 18px;
     margin: 23px 0;
+    padding: 14px 0;
     text-transform: none;
     width: auto;
 
