--- a/source/less/blocks/users-posts.less
+++ b/source/less/blocks/users-posts.less
@@ -99,7 +99,7 @@
   letter-spacing: 0.2px;
   line-height: 24px;
   margin: 0;
-  margin-bottom: 1px;
+  margin-bottom: 10px;
   padding: 0;
 }
 
@@ -109,7 +109,7 @@
   font-weight: normal;
   letter-spacing: 0.2px;
   line-height: 24px;
-  margin: 10px 0 0;
+  margin: 0;
   padding: 0 0 0 31px;
   position: relative;
   text-transform: uppercase;
@@ -117,13 +117,12 @@
   &::before {
     background: url("../img/icon-heart.svg") no-repeat;
     background-size: contain;
-    bottom: 0;
+    bottom: 2px;
     content: "";
-    height: 19px;
+    height: 17px;
     margin: auto;
     position: absolute;
-    top: 0;
-    width: 15px;
+    width: 14px;
   }
 }
 
