Подготовка адаптивной графики в личном проекте

--- a/source/less/blocks/users-posts.less
+++ b/source/less/blocks/users-posts.less
@@ -117,13 +117,12 @@
   &::before {
     background: url("../img/icon-heart.svg") no-repeat;
     background-size: contain;
-    bottom: 0;
+    bottom: 1px;
     content: "";
-    height: 19px;
+    height: 17px;
     margin: auto;
     position: absolute;
-    top: 0;
-    width: 15px;
+    width: 14px;
   }
 }
 
