--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -13,11 +13,23 @@
   }
 }
 
+@media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+  .map {
+    background-image: url("./img/bg-map-mobile@2x.png");
+    background-size: cover;
+}
+
 @media (min-width: @tablet-width) {
   .map {
     background-image: url("../img/bg-map-tablet@1x.jpg");
     background-position: 42% 74%;
     height: 375px;
+  }
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    .map {
+      background-image: url("./img/bg-map-tablet@2x.png");
+      background-size: cover;
   }
 }
 
@@ -26,5 +38,11 @@
     background-image: url("../img/bg-map-desktop@1x.jpg");
     background-position: 50% 69%;
     height: 500px;
+  }
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    .map {
+      background-image: url("./img/bg-map-desctop@2x.png");
+      background-size: cover;
   }
 }
