--- a/source/less/blocks/hero.less
+++ b/source/less/blocks/hero.less
@@ -168,6 +168,7 @@
     .hero {
       background-image: url("../img/bg-back-tablet@2x.jpg");
     }
+  }
 }
 
 @media (min-width: 660px) and (min-resolution: 144dpi),
