--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -17,6 +17,7 @@
   .map {
     background-image: url("../img/bg-map-mobile@2x.png");
     background-size: cover;
+  }
 }
 
 @media (min-width: @tablet-width) {
