--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,5 +1,5 @@
 .map {
-  background-image: url("./img/bg-map-mobile@1x.png");
+  background-image: url("../img/bg-map-mobile@1x.png");
   background-position: 50% 100%;
   box-sizing: border-box;
   height: 200px;
@@ -15,7 +15,7 @@
 
 @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
   .map {
-    background-image: url("../img/bg-map-mobile@2x.png");
+    background-image: url("../img/bg-map-mobile@2x.jpg");
     background-size: cover;
   }
 }
@@ -29,7 +29,7 @@
 
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
     .map {
-      background-image: url("../img/bg-map-tablet@2x.png");
+      background-image: url("../img/bg-map-tablet@2x.jpg");
       background-size: cover;
     }
   }
@@ -37,8 +37,8 @@
 
 @media (min-width: 660px) and (min-resolution: 144dpi),
   (min-width: 660px) and (min-resolution: 1.5dppx) {
-  .hero {
-    background-image: url("../img/bg-map-tablet@2x.png");
+  .map {
+    background-image: url("../img/bg-map-tablet@2x.jpg");
   }
 }
 
@@ -51,7 +51,7 @@
 
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
     .map {
-      background-image: url("../img/bg-map-desctop@2x.png");
+      background-image: url(".../img/bg-map-desktop@2x.jpg");
       background-size: cover;
     }
   }
@@ -59,7 +59,7 @@
 
 @media (min-width: 1200px) and (min-resolution: 144dpi),
   (min-width: 1200px) and (min-resolution: 1.5dppx) {
-  .hero {
-    background-image: url("../img/bg-map-desctop@2x.png");
+  .map {
+    background-image: url("../img/bg-map-desktop@2x.jpg");
   }
 }
