--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -8,9 +8,9 @@
     background-image: url("../img/bg-triangle-white-footer.svg");
     background-size: contain;
     background-repeat: no-repeat;
-    bottom: -99px;
+    bottom: -79px;
     content: "";
-    height: 100px;
+    height: 80px;
     left: 0;
     margin: 0 auto;
     padding: 0;
@@ -24,6 +24,7 @@
 .contacts__question {
   margin: 0 auto;
   padding: 0;
+  margin-bottom: 36px;
 }
 
 @media (min-width: @tablet-width) {
@@ -32,8 +33,8 @@
     padding-top: 47px;
 
     &::after {
-      bottom: -199px;
-      height: 200px;
+      bottom: -129px;
+      height: 130px;
     }
   }
 
@@ -49,8 +50,8 @@
     padding-top: 65px;
 
     &::after {
-      bottom: -399px;
-      height: 400px;
+      bottom: -199px;
+      height: 200px;
     }
   }
 
