--- a/source/less/blocks/edit-photo.less
+++ b/source/less/blocks/edit-photo.less
@@ -8,7 +8,7 @@
 }
 
 .edit-photo__tools-list {
-  align-items: center;
+  align-items: flex-start;
   display: flex;
   justify-content: space-between;
   list-style: none;
@@ -40,6 +40,8 @@
   &--contrast {
     height: 32px;
     margin: 0;
+    margin-left: 3px;
+    margin-top: 7px;
     width: 32px;
   }
 }
@@ -136,6 +138,16 @@
   height: 2px;
 }
 
+.edit-photo__tool-image {
+  height: 48px;
+  width: 48px;
+
+  &--contrast {
+    height: 32px;
+    width: 32px;
+  }
+}
+
 @media (min-width: @tablet-width) {
   .edit-photo {
     border: none;
@@ -180,6 +192,7 @@
     &--contrast {
       height: 16px;
       margin-left: 7px;
+      margin-top: 0;
       width: 16px;
     }
   }
@@ -190,6 +203,16 @@
     margin-right: 20px;
     position: static;
     width: 202px;
+  }
+
+  .edit-photo__tool-image {
+    height: 23px;
+    width: 23px;
+
+    &--contrast {
+      height: 16px;
+      width: 16px;
+    }
   }
 }
 
@@ -220,7 +243,7 @@
 
     &--contrast {
       height: 33px;
-      margin-top: 4px;
+      margin-top: 5px;
       margin-left: 7px;
       margin-bottom: 7px;
       width: 33px;
@@ -229,5 +252,15 @@
 
   .edit-photo__range {
     width: 290px;
+  }
+
+  .edit-photo__tool-image {
+    height: 48px;
+    width: 48px;
+
+    &--contrast {
+      height: 32px;
+      width: 32px;
+    }
   }
 }
