--- a/source/less/blocks/form-competition.less
+++ b/source/less/blocks/form-competition.less
@@ -30,7 +30,7 @@
     width: 280px;
   }
 
-  &--adress {
+  &--address {
     padding-top: 37px;
   }
 }
@@ -125,7 +125,7 @@
     width: 100%;
   }
 
-  &--adress {
+  &--address {
     display: none;
   }
 
@@ -302,7 +302,7 @@
       padding: 43px 59px 59px;
     }
 
-    &--adress {
+    &--address {
       order: 2;
       padding: 31px 33px;
       width: 549px;
@@ -347,7 +347,7 @@
       margin-bottom: 53px;
     }
 
-    &--adress {
+    &--address {
       align-items: flex-start;
       flex-direction: column-reverse;
       justify-content: flex-start;
@@ -441,7 +441,7 @@
       width: auto;
     }
 
-    &--adress {
+    &--address {
       display: inline;
       margin: 0 auto;
     }
@@ -519,7 +519,7 @@
       padding: 45px 0 60px;
     }
 
-    &--adress {
+    &--address {
       padding: 29px 57px 17px;
       width: 100%;
     }
@@ -538,7 +538,7 @@
   }
 
   .form-competition__list {
-    &--adress {
+    &--address {
       align-items: flex-start;
       display: flex;
       justify-content: space-between;
@@ -572,7 +572,7 @@
       }
     }
 
-    &--adress {
+    &--address {
       margin: 0;
     }
   }
