--- a/source/less/blocks/hero.less
+++ b/source/less/blocks/hero.less
@@ -85,6 +85,17 @@
   }
 }
 
+.hero__download-description {
+  color: #ffffff;
+  font-size: 14px;
+  font-weight: lighter;
+  line-height: 24px;
+  margin: 0 auto;
+  padding: 0;
+  text-align: center;
+  width: 250px;
+}
+
 @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
   .hero {
     background-image: url("../img/bg-back-mobile@2x.jpg");
@@ -164,10 +175,10 @@
     width: 293px;
   }
 
-  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-    .hero {
-      background-image: url("../img/bg-back-tablet@2x.jpg");
-    }
+  .hero__download-description {
+    font-size: 18px;
+    line-height: 24px;
+    width: 300px;
   }
 }
 
@@ -192,8 +203,7 @@
     height: 644px;
     margin: 0;
     margin-left: -168px;
-    right: 129px;
-    width: 808px;
+    width: 810px;
   }
 
   .hero__download {
@@ -221,10 +231,9 @@
     width: 296px;
   }
 
-  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-    .hero {
-      background-image: url("../img/bg-back-desktop@2x.jpg");
-    }
+  .hero__download-description {
+    font-size: 18px;
+    line-height: 24px;
   }
 }
 
