--- a/source/less/blocks/pop-up.less
+++ b/source/less/blocks/pop-up.less
@@ -29,7 +29,7 @@
   text-align: center;
 }
 
-.pop-up__desctiption {
+.pop-up__description {
   font-size: 14px;
   font-weight: normal;
   line-height: 24px;
@@ -65,7 +65,7 @@
     line-height: 40px;
   }
 
-  .pop-up__desctiption {
+  .pop-up__description {
     font-size: 18px;
     line-height: 24px;
   }
@@ -75,11 +75,12 @@
 
     &--success {
       margin-top: 38px;
+      margin-bottom: 0;
       padding: 48px 0;
     }
   }
 
-  .pop-up__desctiption br {
+  .pop-up__description br {
     display: none;
   }
 }
