--- a/source/less/blocks/users-posts.less
+++ b/source/less/blocks/users-posts.less
@@ -172,7 +172,7 @@
   }
 
   .users-posts__article {
-    height: 109px;
+    min-height: 109px;
     padding: 25px 0 21px;
     width: 300px;
 
@@ -188,8 +188,8 @@
   }
 
   .users-posts__description {
-    height: 59px;
     letter-spacing: 0.3px;
+    min-height: 59px;
 
     &--pano {
       height: auto;
