--- a/source/less/blocks/hero.less
+++ b/source/less/blocks/hero.less
@@ -186,6 +186,11 @@
   (min-width: 660px) and (min-resolution: 1.5dppx) {
   .hero {
     background-image: url("../img/bg-back-tablet@2x.jpg");
+    background-size: 200%;
+
+    &--main {
+    background-size: cover;
+    }
   }
 }
 
@@ -241,5 +246,6 @@
   (min-width: 1200px) and (min-resolution: 1.5dppx) {
   .hero {
     background-image: url("../img/bg-back-desktop@2x.jpg");
+    background-size: 200%;
   }
 }
