--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -268,9 +268,10 @@
     border: none;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     list-style: none;
-    margin: 0;
+    margin: 23px 0;
     padding: 0;
     width: 619px;
   }
@@ -282,7 +283,7 @@
   .main-nav__item {
     border: none;
     line-height: 18px;
-    margin: 23px 0;
+    margin: 0;
     padding: 14px 0;
     text-transform: none;
     width: auto;
