--- a/source/less/blocks/users-posts.less
+++ b/source/less/blocks/users-posts.less
@@ -134,7 +134,7 @@
 
 @media (min-width: @tablet-width) {
   .users-posts {
-    align-items: center;
+    align-items: flex-start;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -177,7 +177,7 @@
     width: 300px;
 
     &--pano {
-      height: auto;
+      min-height: auto;
       padding: 24px 0;
       width: 620px;
     }
@@ -192,7 +192,7 @@
     min-height: 59px;
 
     &--pano {
-      height: auto;
+      min-height: auto;
       width: 566px;
     }
   }
