--- a/source/less/blocks/hero.less
+++ b/source/less/blocks/hero.less
@@ -186,11 +186,7 @@
   (min-width: 660px) and (min-resolution: 1.5dppx) {
   .hero {
     background-image: url("../img/bg-back-tablet@2x.jpg");
-    background-size: 200%;
-
-    &--main {
-      background-size: cover;
-    }
+    background-size: 1320px auto;
   }
 }
 
@@ -246,6 +242,6 @@
   (min-width: 1200px) and (min-resolution: 1.5dppx) {
   .hero {
     background-image: url("../img/bg-back-desktop@2x.jpg");
-    background-size: 200%;
+    background-size: 2400px auto;
   }
 }
