--- a/source/less/blocks/hero.less
+++ b/source/less/blocks/hero.less
@@ -187,6 +187,10 @@
   .hero {
     background-image: url("../img/bg-back-tablet@2x.jpg");
     background-size: 1320px auto;
+
+    &--main {
+      background-size: cover;
+    }
   }
 }
 
